added result.html file

--- a/templates/results.html
+++ b/templates/results.html
@@ -7,9 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/results">
-        <input type="text" name=""/>
-        <input type="submit" value="Submit"/>
-    </form>
+    <p>Hello World!</p>
+    <p>Hello World!</p>
+    <p>Hello World!</p>
+    <p>Hello World!</p>
+    <p>Hello World!</p>
+    <p>Hello World!</p>
+    <p>Hello World!</p>
+    <p>Hello World!</p>
+    <p>Hello World!</p>
 </body>
 </html>
