--- a/templates/results.html
+++ b/templates/results.html
@@ -7,14 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello World!</p>
-    <p>Hello World!</p>
-    <p>Hello World!</p>
-    <p>Hello World!</p>
-    <p>Hello World!</p>
-    <p>Hello World!</p>
-    <p>Hello World!</p>
-    <p>Hello World!</p>
-    <p>Hello World!</p>
+    
+    {% for tweet in tweets %}
+    <li><a href="https://twitter.com/statuses/{{ tweet.id }}">{{ tweet.text }}</a></li>
+    {% endfor %}
 </body>
 </html>
