--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/results">
-        <input type="text" name=""/>
+    <form action="/results" method="POST">
+        <input type="text" name="search"/>
         <input type="submit" value="Submit"/>
     </form>
 </body>
