fixed merge conflict

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/results" method="POST">
+    <form action="/results">
         <input type="text" name="search"/>
         <input type="submit" value="Submit"/>
     </form>
